--- a/EquipmentRepairServiceCenter.ASP/Views/Shared/_Layout.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Shared/_Layout.cshtml
@@ -4,15 +4,42 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="~/css/main.css" type="text/css"/>
+    <link rel="stylesheet" href="~/css/containers.css" type="text/css"/>
+    <link rel="stylesheet" href="~/css/buttons.css" type="text/css"/>
+    <link rel="stylesheet" href="~/css/forms.css" type="text/css"/>
     <title>Equipment Repair Service Center</title>
 </head>
 <body>
     <header>
-        <h1>Equipment Repair Service Center</h1>
+        <div class="header-container">
+            <h2>Equipment Repair Service Center</h2>
+            <a class="sign-out-btn" href="/Home/StartPage">Sign Out</a>
+        </div>
     </header>
 
     <div id="main">
         @RenderBody()
     </div>
+
+    <script>
+        function confirmRemoving() {
+            const isOk = confirm('Do you really want to delete the object?');
+            if (!isOk) {
+                document.querySelector('.del-text').textContent = '';
+            } 
+        }
+        let signOutBtn = document.querySelector('.sign-out-btn');
+        let backBtn = document.querySelector('.back-btn');
+        let pathName = document.location.pathname;
+        if (pathName == '/' || pathName == '/Accounts/Login' || pathName == '/Accounts/Register' || pathName == '/Home/StartPage') {
+            signOutBtn.style.display = 'none';
+            backBtn.style.right = '30px';
+        }
+        else {
+            signOutBtn.style.display = 'block';
+            backBtn.style.right = '160px';
+        }
+    </script>
 </body>
 </html>
