implemented getting and searching employees

--- a/EquipmentRepairServiceCenter.ASP/Views/Shared/_Layout.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/containers.css" type="text/css"/>
     <link rel="stylesheet" href="~/css/buttons.css" type="text/css"/>
     <link rel="stylesheet" href="~/css/forms.css" type="text/css"/>
+    <link rel="stylesheet" href="~/css/table.css" type="text/css"/>
     <title>Equipment Repair Service Center</title>
 </head>
 <body>
