--- a/EquipmentRepairServiceCenter.ASP/wwwroot/css/buttons.css
+++ b/EquipmentRepairServiceCenter.ASP/wwwroot/css/buttons.css
@@ -39,7 +39,6 @@
     text-align: center;
     padding: 7px 0 7px 0;
     border: 1px solid #272773;
-    margin-top: 20px;
     margin-right: 15px;
     background-color: #C9DFFF;
     color: #272773;
@@ -54,7 +53,7 @@
     transition: all 0.3s;
 }
 
-﻿.back-btn {
+.back-btn {
     position: fixed;
     right: 160px;
     top: 20px;
@@ -65,11 +64,5 @@
     border: 1px solid #272773;
     background-color: none;
     border-radius: 5px;
-    transition: all 0.3s;
-}
-
-.back-btn:hover {
-    background-color: #272773;
-    color: white;
     transition: all 0.3s;
 }
