--- a/EquipmentRepairServiceCenter.ASP/wwwroot/css/containers.css
+++ b/EquipmentRepairServiceCenter.ASP/wwwroot/css/containers.css
@@ -13,7 +13,7 @@
     margin-top: 100px;
 }
 
-﻿.field-container {
+.field-container {
     display: flex;
     flex-direction: column;
     margin-top: 10px;
