--- a/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @using EquipmentRepairServiceCenter.Domain.Models.User
+@using EquipmentRepairServiceCenter.DTO.Employee
