added functionality by variant

--- a/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
@@ -7,7 +7,7 @@
 <div>
     <h3 class="h3-above-table">Employees</h3>
 
-    <form class="getting-form" asp-action="GetAllBySurname" method="get">
+    <form class="getting-form" asp-action="GetAllByProps" method="get">
         <input class="input-props" type="text" name="surname" placeholder="Surname or part of surname"/>
         <input class="input-props" type="text" name="name" placeholder="Name or part of name"/>
         <input class="input-props" type="text" name="middleName" placeholder="Middle name or part of middle name"/>
