--- a/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
@@ -2,3 +2,6 @@
 
 @using EquipmentRepairServiceCenter.Domain.Models.User
 @using EquipmentRepairServiceCenter.DTO.Employee
+@using EquipmentRepairServiceCenter.DTO.RepairingModel
+@using EquipmentRepairServiceCenter.Domain.Models
+@using EquipmentRepairServiceCenter.ASP.LocalDto
