--- a/EquipmentRepairServiceCenter.ASP/wwwroot/css/buttons.css
+++ b/EquipmentRepairServiceCenter.ASP/wwwroot/css/buttons.css
@@ -66,3 +66,9 @@
     border-radius: 5px;
     transition: all 0.3s;
 }
+
+.back-btn:hover {
+    background-color: #272773;
+    color: white;
+    transition: all 0.3s;
+}
