implemented functionality by task

--- a/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
@@ -40,5 +40,5 @@
             }
         </tbody>
     </table>
-    <a class="back-btn" href="/Home/Index">Back</a>
+    <a class="back-btn" href="/Home/AdminsPage">Back</a>
 </div>
