--- a/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
@@ -3,3 +3,5 @@
     <li><a href="/Faults/GetAll">Faults</a></li>
     <li><a href="/Orders/GetAll">Orders</a></li>
 </ul>
+
+<a class="back-btn" href="/Home/Index">Back</a>
