--- a/EquipmentRepairServiceCenter.ASP/Views/Home/Index.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿<ul class="main-menu">
-    <li><a href="/Employees/GetAll">Employees</a></li>
-    <li><a href="/Faults/GetAll">Faults</a></li>
-    <li><a href="/Orders/GetAll">Orders</a></li>
+    <li><a href="/Orders/Create">Do Order</a></li>
+    <li><a href="/Home/AdminsPage">Page For Admins</a></li>
 </ul>
