--- a/EquipmentRepairServiceCenter.ASP/wwwroot/css/containers.css
+++ b/EquipmentRepairServiceCenter.ASP/wwwroot/css/containers.css
@@ -24,3 +24,11 @@
     flex-direction: row;
     margin-top: 20px;
 }
+
+.date-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    color: #272773;
+}
