--- a/EquipmentRepairServiceCenter.ASP/wwwroot/css/containers.css
+++ b/EquipmentRepairServiceCenter.ASP/wwwroot/css/containers.css
@@ -32,3 +32,16 @@
     align-items: center;
     color: #272773;
 }
+
+.index-container {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+}
+
+.user-info-container {
+    box-sizing: border-box;
+    padding-right: 100px;
+    font-size: 110%;
+    border-right: 1px solid #272773;
+}
