--- a/EquipmentRepairServiceCenter.ASP/wwwroot/css/main.css
+++ b/EquipmentRepairServiceCenter.ASP/wwwroot/css/main.css
@@ -48,7 +48,7 @@ a {
 
 .main-menu{
     width: 30%;
-    margin: 30px 0 0 0;
+    margin: 0 0 0 100px;
     padding: 0;
     list-style: none;
 }
@@ -63,4 +63,10 @@ a {
 
 img {
     width: 100px;
+}
+
+hr {
+    border: none;
+    height: 1px;
+    background-color: #272773;
 }
