created some actions for admin

--- a/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
@@ -1,7 +1,46 @@
-﻿<ul class="main-menu">
-    <li><a href="/Employees/GetAll">Employees</a></li>
-    <li><a href="/Faults/GetAll">Faults</a></li>
-    <li><a href="/Orders/GetAll">Orders</a></li>
-</ul>
+﻿
+<div class="admins-container">
+    <div class="inner-admins-block">
+        <h3>Get</h3>
+
+        <ul class="main-menu-admin">
+            <li><a href="/Employees/GetAll">Employees</a></li>
+            <li><a href="/Faults/GetAll">Faults</a></li>
+            <li><a href="/Orders/GetAll">Orders</a></li>
+        </ul>
+    </div>
+
+    <div class="inner-admins-block">
+        <h3>Create</h3>
+
+        <ul class="main-menu-admin">
+            <li style="background-color: #d4ffd7"><a href="/Employees/Create">Employees</a></li>
+            <li style="background-color: #d4ffd7"><a href="/Faults/Create">Faults</a></li>
+            <li style="background-color: #d4ffd7"><a href="/RepairingModels/Create">Repairing Models</a></li>
+        </ul>
+    </div>
+</div>
+
+<div class="admins-container">
+    <div class="inner-admins-block">
+        <h3>Update</h3>
+
+        <ul class="main-menu-admin">
+            <li style="background-color: #f5f5d3"><a href="/Employees/Update">Employees</a></li>
+            <li style="background-color: #f5f5d3"><a href="/Faults/Update">Faults</a></li>
+            <li style="background-color: #f5f5d3"><a href="/RepairingModels/Update">Repairing Models</a></li>
+        </ul>
+    </div>
+
+    <div class="inner-admins-block">
+        <h3>Delete</h3>
+
+        <ul class="main-menu-admin">
+            <li style="background-color: #fccaea"><a href="/Employees/Delete">Employees</a></li>
+            <li style="background-color: #fccaea"><a href="/Faults/Delete">Faults</a></li>
+            <li style="background-color: #fccaea"><a href="/RepairingModels/Delete">Repairing Models</a></li>
+        </ul>
+    </div>
+</div>
 
 <a class="back-btn" href="/Home/Index">Back</a>
