--- a/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
@@ -4,4 +4,4 @@
 @using EquipmentRepairServiceCenter.DTO.Employee
 @using EquipmentRepairServiceCenter.DTO.RepairingModel
 @using EquipmentRepairServiceCenter.Domain.Models
-@using EquipmentRepairServiceCenter.ASP.LocalDto
+@using EquipmentRepairServiceCenter.ASP.ViewModels
