implemented CRUD for RepairingModel

--- a/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
@@ -26,9 +26,9 @@
         <h3>Update</h3>
 
         <ul class="main-menu-admin">
-            <li style="background-color: #f5f5d3"><a href="/Employees/Update">Employees</a></li>
-            <li style="background-color: #f5f5d3"><a href="/Faults/Update">Faults</a></li>
-            <li style="background-color: #f5f5d3"><a href="/RepairingModels/Update">Repairing Models</a></li>
+            <li style="background-color: #f5f5d3"><a href="/Employees/GetAllForUpdate">Employees</a></li>
+            <li style="background-color: #f5f5d3"><a href="/Faults/GetAllForUpdate">Faults</a></li>
+            <li style="background-color: #f5f5d3"><a href="/RepairingModels/GetAllForUpdate">Repairing Models</a></li>
         </ul>
     </div>
 
@@ -36,9 +36,9 @@
         <h3>Delete</h3>
 
         <ul class="main-menu-admin">
-            <li style="background-color: #fccaea"><a href="/Employees/Delete">Employees</a></li>
-            <li style="background-color: #fccaea"><a href="/Faults/Delete">Faults</a></li>
-            <li style="background-color: #fccaea"><a href="/RepairingModels/Delete">Repairing Models</a></li>
+            <li style="background-color: #fccaea"><a href="/Employees/GetAllForDelete">Employees</a></li>
+            <li style="background-color: #fccaea"><a href="/Faults/GetAllForDelete">Faults</a></li>
+            <li style="background-color: #fccaea"><a href="/RepairingModels/GetAllForDelete">Repairing Models</a></li>
         </ul>
     </div>
 </div>
