--- a/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetAllForUpdate.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetAllForUpdate.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Employees";
+    ViewData["Title"] = "Repairing Modek=ls";
 }
 
 <div>
-    <h3 class="h3-above-table">Employees</h3>
+    <h3 class="h3-above-table">Repairing Models</h3>
 
     <form class="getting-form" asp-action="GetAllByProps_Update" method="get">
         <input class="input-props" type="text" name="name" placeholder="Name of repairing model" />
