--- a/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using EquipmentRepairServiceCenter.Domain.Models.User
 @using EquipmentRepairServiceCenter.DTO.Employee
 @using EquipmentRepairServiceCenter.DTO.RepairingModel
+@using EquipmentRepairServiceCenter.DTO.Fault
 @using EquipmentRepairServiceCenter.Domain.Models
 @using EquipmentRepairServiceCenter.ASP.ViewModels
