--- a/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
@@ -14,7 +14,7 @@
         <h3>Create</h3>
 
         <ul class="main-menu-admin">
-            <li style="background-color: #d4ffd7"><a href="/Employees/Create">Employees</a></li>
+            <li style="background-color: #d4ffd7"><a href="/Accounts/RegisterEmployee">Employees</a></li>
             <li style="background-color: #d4ffd7"><a href="/Faults/Create">Faults</a></li>
             <li style="background-color: #d4ffd7"><a href="/RepairingModels/Create">Repairing Models</a></li>
         </ul>
