added data annotations and model validation

--- a/EquipmentRepairServiceCenter.ASP/Views/Accounts/Login.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Accounts/Login.cshtml
@@ -15,7 +15,7 @@
             <label asp-for="UserName">Login</label>
             <div>
                 <input class="input-props" asp-for="UserName"/>
-                <span class="error-mes-span" asp-validation-for="UserName"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="UserName"></span>
             </div>
         </div>
 
@@ -23,7 +23,7 @@
             <label asp-for="Password"></label>
             <div>
                 <input class="input-props" asp-for="Password"/>
-                <span class="error-mes-span" asp-validation-for="Password"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Password"></span>
             </div>
         </div>
 
