--- a/EquipmentRepairServiceCenter.ASP/Views/Employees/Update.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Employees/Update.cshtml
@@ -35,7 +35,7 @@
             <label asp-for="Surname"></label>
             <div>
                 <input class="input-props" asp-for="Surname" />
-                <span class="error-mes-span" asp-validation-for="Surname"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Surname"></span>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
             <label asp-for="Name"></label>
             <div>
                 <input class="input-props" asp-for="Name" />
-                <span class="error-mes-span" asp-validation-for="Name"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Name"></span>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
             <label asp-for="MiddleName">Middle name</label>
             <div>
                 <input class="input-props" asp-for="MiddleName" />
-                <span class="error-mes-span" asp-validation-for="MiddleName"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="MiddleName"></span>
             </div>
         </div>
 
@@ -66,7 +66,7 @@
             <label asp-for="WorkExperienceInYears">Work Experience (years)<br/>(old work experience: @Model.WorkExperienceInYears)</label>
             <div>
                 <input class="input-props" asp-for="WorkExperienceInYears" type="number"/>
-                <span class="error-mes-span" asp-validation-for="WorkExperienceInYears"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="WorkExperienceInYears"></span>
             </div>
         </div>
 
