--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/Create.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/Create.cshtml
@@ -17,7 +17,7 @@
             <label asp-for="Name"></label>
             <div>
                 <input class="input-props" asp-for="Name" />
-                <span class="error-mes-span" asp-validation-for="Name"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Name"></span>
             </div>
         </div>
 
@@ -32,7 +32,7 @@
             <label asp-for="RepairingMethods">Repairing Methods</label>
             <div>
                 <textarea style="height: 130px; width: 350px;" class="input-props" asp-for="RepairingMethods"></textarea>
-                <span class="error-mes-span" asp-validation-for="RepairingMethods"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="RepairingMethods"></span>
             </div>
         </div>
 
@@ -40,7 +40,7 @@
             <label asp-for="Price"></label>
             <div>
                 <input class="input-props" asp-for="Price" type="number" />
-                <span class="error-mes-span" asp-validation-for="Price"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Price"></span>
             </div>
         </div>
 
