--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/Update.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/Update.cshtml
@@ -19,7 +19,7 @@
             <label asp-for="RepairingMethods">Repairing Methods</label>
             <div>
                 <textarea style="height: 130px; width: 350px;" class="input-props" asp-for="RepairingMethods"></textarea>
-                <span class="error-mes-span" asp-validation-for="RepairingMethods"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="RepairingMethods"></span>
             </div>
         </div>
 
@@ -27,7 +27,7 @@
             <label asp-for="Price">Price (old price: @Model.Price)</label>
             <div>
                 <input class="input-props" asp-for="Price" type="number"/>
-                <span class="error-mes-span" asp-validation-for="Price"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Price"></span>
             </div>
         </div>
 
