--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/Create.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/Create.cshtml
@@ -46,6 +46,7 @@
             <label asp-for="RepairingModelSpecifications">Equipment Specifications</label>
             <div>
                 <input class="input-props" asp-for="RepairingModelSpecifications"/>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="RepairingModelSpecifications"></span>
             </div>
         </div>
 
@@ -53,7 +54,7 @@
             <label asp-for="RepairingModelParticularQualities">Equipment Particular Qualities</label>
             <div>
                 <input class="input-props" asp-for="RepairingModelParticularQualities"/>
-                <span class="error-mes-span" asp-validation-for="RepairingModelParticularQualities"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="RepairingModelParticularQualities"></span>
             </div>
         </div>
 
@@ -61,7 +62,7 @@
             <label asp-for="RepairingModelPhotoUrl">Photo Url</label>
             <div>
                 <input class="input-props" asp-for="RepairingModelPhotoUrl"/>
-                <span class="error-mes-span" asp-validation-for="RepairingModelPhotoUrl"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="RepairingModelPhotoUrl"></span>
             </div>
         </div>
 
@@ -69,7 +70,7 @@
             <label asp-for="FaultName">Fault</label>
             <div>
                 <input class="input-props" asp-for="FaultName" />
-                <span class="error-mes-span" asp-validation-for="FaultName"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="FaultName"></span>
             </div>
         </div>
 
