--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/Update.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/Update.cshtml
@@ -28,7 +28,7 @@
             <label asp-for="RepairingMethods">Repairing Methods</label>
             <div>
                 <input class="input-props" asp-for="RepairingMethods" />
-                <span class="error-mes-span" asp-validation-for="RepairingMethods"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="RepairingMethods"></span>
             </div>
         </div>
 
@@ -36,7 +36,7 @@
             <label asp-for="RepairingTimeInDays">Repairing Time (Days)</label>
             <div>
                 <input class="input-props" type="number" asp-for="RepairingTimeInDays" />
-                <span class="error-mes-span" asp-validation-for="RepairingTimeInDays"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="RepairingTimeInDays"></span>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
             <label asp-for="Price">Price</label>
             <div>
                 <input class="input-props" type="number" asp-for="Price" />
-                <span class="error-mes-span" asp-validation-for="Price"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Price"></span>
             </div>
         </div>
 
@@ -52,7 +52,7 @@
             <label asp-for="GuaranteeInMonth">Guarantee (Months)</label>
             <div>
                 <input class="input-props" type="number" asp-for="GuaranteeInMonth" />
-                <span class="error-mes-span" asp-validation-for="GuaranteeInMonth"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="GuaranteeInMonth"></span>
             </div>
         </div>
 
