--- a/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/Create.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/Create.cshtml
@@ -32,7 +32,7 @@
             <label asp-for="Specifications"></label>
             <div>
                 <textarea style="height: 130px; width: 350px;" class="input-props" asp-for="Specifications"></textarea>
-                <span class="error-mes-span" asp-validation-for="Specifications"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Specifications"></span>
             </div>
         </div>
 
@@ -40,7 +40,7 @@
             <label asp-for="ParticularQualities">Particular Qualities</label>
             <div>
                 <textarea style="height: 130px; width: 350px;" class="input-props" asp-for="ParticularQualities"></textarea>
-                <span class="error-mes-span" asp-validation-for="ParticularQualities"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="ParticularQualities"></span>
             </div>
         </div>
 
@@ -48,7 +48,7 @@
             <label asp-for="PhotoUrl">Photo Url</label>
             <div>
                 <input class="input-props" asp-for="PhotoUrl" />
-                <span class="error-mes-span" asp-validation-for="PhotoUrl"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="PhotoUrl"></span>
             </div>
         </div>
 
