--- a/EquipmentRepairServiceCenter.ASP/Views/Accounts/Register.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Accounts/Register.cshtml
@@ -11,7 +11,7 @@
             <label asp-for="Surname"></label>
             <div>
                 <input class="input-props" asp-for="Surname"/>
-                <span class="error-mes-span" asp-validation-for="Surname"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Surname"></span>
             </div>
         </div>
 
@@ -19,7 +19,7 @@
             <label asp-for="Name"></label>
             <div>
                 <input class="input-props" asp-for="Name"/>
-                <span class="error-mes-span" asp-validation-for="Name"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Name"></span>
             </div>
         </div>
 
@@ -27,7 +27,7 @@
             <label asp-for="MiddleName">Middle name</label>
             <div>
                 <input class="input-props" asp-for="MiddleName"/>
-                <span class="error-mes-span" asp-validation-for="MiddleName"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="MiddleName"></span>
             </div>
         </div>
 
@@ -35,7 +35,7 @@
             <label asp-for="UserName">Login</label>
             <div>
                 <input class="input-props" asp-for="UserName"/>
-                <span class="error-mes-span" asp-validation-for="UserName"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="UserName"></span>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
             <label asp-for="Email"></label>
             <div>
                 <input class="input-props" asp-for="Email"/>
-                <span class="error-mes-span" asp-validation-for="Email"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Email"></span>
             </div>
         </div>
 
@@ -51,15 +51,15 @@
             <label asp-for="Password"></label>
             <div>
                 <input class="input-props" asp-for="Password"/>
-                <span class="error-mes-span" asp-validation-for="Password"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Password"></span>
             </div>
         </div>
 
         <div class="field-container">
-            <label asp-for="ConfirmPassword"></label>
+            <label asp-for="ConfirmPassword">Confirm Password</label>
             <div>
                 <input class="input-props" asp-for="ConfirmPassword"/>
-                <span class="error-mes-span" asp-validation-for="ConfirmPassword"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="ConfirmPassword"></span>
             </div>
         </div>
 
