--- a/EquipmentRepairServiceCenter.ASP/Views/Accounts/RegisterEmployee.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Accounts/RegisterEmployee.cshtml
@@ -28,7 +28,7 @@
             <label asp-for="Surname"></label>
             <div>
                 <input class="input-props" asp-for="Surname" />
-                <span class="error-mes-span" asp-validation-for="Surname"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Surname"></span>
             </div>
         </div>
 
@@ -36,7 +36,7 @@
             <label asp-for="Name"></label>
             <div>
                 <input class="input-props" asp-for="Name" />
-                <span class="error-mes-span" asp-validation-for="Name"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Name"></span>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
             <label asp-for="MiddleName">Middle name</label>
             <div>
                 <input class="input-props" asp-for="MiddleName" />
-                <span class="error-mes-span" asp-validation-for="MiddleName"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="MiddleName"></span>
             </div>
         </div>
 
@@ -52,7 +52,7 @@
             <label asp-for="UserName">Login</label>
             <div>
                 <input class="input-props" asp-for="UserName" />
-                <span class="error-mes-span" asp-validation-for="UserName"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="UserName"></span>
             </div>
         </div>
 
